remove border radius bug on mobile

--- a/src/common-styles/_reset.scss
+++ b/src/common-styles/_reset.scss
@@ -49,7 +49,7 @@ p
     margin: 0;
 }
 
-input {
+input, textarea {
     border: none;
     -webkit-appearance: none;
     border-radius: 0;
